--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <div class="navbar">
-            <div class="">
+            <div class="menu_bar-logo">
                 <div class="menu_bar">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M3 4H21V6H3V4ZM9 11H21V13H9V11ZM3 18H21V20H3V18Z"></path>
@@ -23,7 +23,7 @@
                 </a>
             </div>
             <div class="">
-                
+
             </div>
         </div>
     </div>
