--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <div class="menu_bar-logo">
                 <div class="menu_bar">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" fill="white">
                         <path d="M3 4H21V6H3V4ZM9 11H21V13H9V11ZM3 18H21V20H3V18Z"></path>
                     </svg>
                 </div>
