--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube Clone</title>
-    <link rel="stylesheet" href="style/style.css">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
+    <title>Youtube Clone</title>
+    <!-- Remix Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css"
+        integrity="sha512-6p+GTq7fjTHD/sdFPWHaFoALKeWOU9f9MPBoPnvJEWBkGS4PKVVbCpMps6IXnTiXghFbxlgDE8QRHc3MU91lJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -20,11 +25,15 @@
                 </div>
                 <a href="#" class="logo">
                     <img src="assets/img/logo.png" alt="">
+                    Youtube
                 </a>
             </div>
-            <div class="">
-                <input type="text">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white">
+            <div class="search_part">
+                <input id="search_inp" type="text" placeholder="So'rovingizni kiriting">
+                <label for="search_inp">
+                    <i class="ri-keyboard-box-fill"></i>
+                </label>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" fill="white">
                     <path
                         d="M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z">
                     </path>
