--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </svg>
                 </div>
                 <a href="#" class="logo">
-                    <img src="assets/img/logo.png" alt="">
+                    <img src="assets/img/logo.png" class="img">
                     Youtube
                 </a>
             </div>
