--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     </path>
                 </svg>
             </div>
+            <div class="account">
+                <i class="ri-video-add-line"></i>
+                <i class="ri-notification-3-line"></i>
+            </div>
         </div>
     </div>
 </body>
