--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="account">
                 <i class="ri-video-add-line"></i>
                 <i class="ri-notification-3-line"></i>
+                <div class="profile">T</div>
             </div>
         </div>
     </div>
