--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <main>
+    <main class="main">
         <div class="guide-content">
             <div class="guide_first guide">
                 <div class="home active">
@@ -315,7 +315,7 @@
                 </div>
             </div>
         </div>
-        <section class="main-part"></section>
+        <section class="main-part">dasda</section>
     </main>
 </body>
 
