errors have been corrected

--- a/index.html
+++ b/index.html
@@ -315,7 +315,11 @@
                 </div>
             </div>
         </div>
-        <section class="main-part">dasda</section>
+        <div class="main-part">
+            <div class="youtube-part-mein">
+                dasdas
+            </div>
+        </div>
     </main>
 </body>
 
