--- a/index.html
+++ b/index.html
@@ -317,7 +317,13 @@
         </div>
         <div class="main-part">
             <div class="youtube-part-mein">
-                dasdas
+                <div class="pages">
+                    <div class="all">All</div>
+                    <div class="gaming">Gaming</div>
+                    <div class="music">Music</div>
+                    <div class="mixes">Mixes</div>
+                    <div class="live">Live</div>
+                </div>
             </div>
         </div>
     </main>
