--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <div class="main-part">
             <div class="youtube-part-mein">
                 <div class="pages">
-                    <div class="all">All</div>
+                    <div class="all activ">All</div>
                     <div class="gaming">Gaming</div>
                     <div class="music">Music</div>
                     <div class="mixes">Mixes</div>
