--- a/index.html
+++ b/index.html
@@ -320,9 +320,12 @@
                 <div class="pages">
                     <div class="all activ">All</div>
                     <div class="gaming">Gaming</div>
+                    <div class="outer">Outer Space</div>
                     <div class="music">Music</div>
+                    <div class="counter">Counter Strike 1.6</div>
                     <div class="mixes">Mixes</div>
                     <div class="live">Live</div>
+                    <div class="mobile">Mobile Legends</div>
                 </div>
             </div>
         </div>
