--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
                     <div class="mixes">Mixes</div>
                     <div class="live">Live</div>
                     <div class="mobile">Mobile Legends</div>
+                    <div class="mobile">Microsoft Office</div>
                 </div>
             </div>
         </div>
