--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
                     <div class="mixes">Mixes</div>
                     <div class="live">Live</div>
                     <div class="mobile">Mobile Legends</div>
-                    <div class="mobile">Microsoft Office</div>
+                    <div class="microsoft">Microsoft Office</div>
+                    <div class="keyboard"></div>
                 </div>
             </div>
         </div>
