Adding code example

--- a/index.html
+++ b/index.html
@@ -327,7 +327,10 @@
                     <div class="live">Live</div>
                     <div class="mobile">Mobile Legends</div>
                     <div class="microsoft">Microsoft Office</div>
-                    <div class="keyboard"></div>
+                    <div class="keyboard">Computer keyboard</div>
+                    <div class="sourse">Source Code</div>
+                    <div class="programm">Computer Programming</div>
+                    <div class="piano">Piano</div>
                 </div>
             </div>
         </div>
