--- a/index.html
+++ b/index.html
@@ -320,24 +320,32 @@
         <div class="main-part">
             <div class="youtube-part-mein">
                 <div class="pages">
-                    <div class="all activ">All</div>
-                    <div class="gaming">Gaming</div>
-                    <div class="outer">Outer Space</div>
-                    <div class="music">Music</div>
-                    <div class="counter">Counter Strike 1.6</div>
-                    <div class="mixes">Mixes</div>
-                    <div class="live">Live</div>
-                    <div class="mobile">Mobile Legends</div>
-                    <div class="microsoft">Microsoft Office</div>
-                    <div class="keyboard">Computer keyboard</div>
-                    <div class="sourse">Source Code</div>
-                    <div class="programm">Computer Programming</div>
-                    <div class="piano">Piano</div>
+                    <div class="splide" id="splide">
+                        <div class="splide__track">
+                            <div class="splide__list">
+                                <div class="splide_slide">
+                                    <div class="all activ">All</div>
+                                    <div class="gaming">Gaming</div>
+                                    <div class="outer">Outer Space</div>
+                                    <div class="music">Music</div>
+                                    <div class="counter">Counter Strike 1.6</div>
+                                    <div class="mixes">Mixes</div>
+                                    <div class="live">Live</div>
+                                    <div class="mobile">Mobile Legends</div>
+                                    <div class="microsoft">Microsoft Office</div>
+                                    <div class="keyboard">Computer keyboard</div>
+                                    <div class="sourse">Source Code</div>
+                                    <div class="programm">Computer Programming</div>
+                                    <div class="piano">Piano</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    
+    <script src="/js/splide.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
 </body>
 
