is being corrected

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <div class="splide" id="splide">
                         <div class="splide__track">
                             <div class="splide__list">
-                                <div class="splide_slide">
+                                <div class="splide__slide">
                                     <div class="all activ">All</div>
                                     <div class="gaming">Gaming</div>
                                     <div class="outer">Outer Space</div>
