--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <div class="main-part">
             <div class="youtube-part-mein">
                 <div class="pages">
-                    <div class="splide" id="splide">
+                    <div class="splide" id="splide1">
                         <div class="splide__track">
                             <div class="splide__list">
                                 <div class="splide__slide">
