slider is being corrected

--- a/index.html
+++ b/index.html
@@ -325,17 +325,41 @@
                             <div class="splide__list">
                                 <div class="splide__slide">
                                     <div class="all activ">All</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="gaming">Gaming</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="outer">Outer Space</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="music">Music</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="counter">Counter Strike 1.6</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="mixes">Mixes</div>
+                                </div>
+                                <div class="splide_slide">
                                     <div class="live">Live</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="mobile">Mobile Legends</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="microsoft">Microsoft Office</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="keyboard">Computer keyboard</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="sourse">Source Code</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="programm">Computer Programming</div>
+                                </div>
+                                <div class="splide__slide">
                                     <div class="piano">Piano</div>
                                 </div>
                             </div>
@@ -345,8 +369,8 @@
             </div>
         </div>
     </main>
-    <script src="/js/splide.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="/js/splide.js"></script>
 </body>
 
 </html>
