splide js is being corrected

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 <div class="splide__slide">
                                     <div class="mixes">Mixes</div>
                                 </div>
-                                <div class="splide_slide">
+                                <div class="splide__slide">
                                     <div class="live">Live</div>
                                 </div>
                                 <div class="splide__slide">
